--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -49,17 +49,28 @@ button {
     background-size: cover;
     background-position: center;
 
-    .book-info {
+    .infodiv {
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-left: $margin-size;
+      justify-content: center;
       width: 50%;
-      margin: 0 auto;
-    }
+      background-color: rgba(255, 255, 255, 0.8);
+      padding: 2rem;
+      border-radius: 1rem;
 
-    h6 {
-      font-size: 2rem;
+      .book-info {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-left: $margin-size;
+        width: 50%;
+        margin: 0 auto;
+      }
+
+      h6 {
+        font-size: 2rem;
+      }
     }
   }
 }
