--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,5 @@
-/* Fixed CSS code */
+@import "mixin";
+
 .background {
   position: fixed;
   top: 0;
@@ -29,6 +30,7 @@
 .top h2 {
   font-size: 35px;
   text-align: center;
+  @include logo-font-style;
 }
 
 .top {
