the buttons design for tabs has been compelted

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -34,16 +34,15 @@
         .active {
           button {
             .icon {
-              background: #333;
-              color: #fff;
+              color: #333;
               /*          transform: translateY(-55px); */
               /*       box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.25),
                 inset 2px 2px 3px rgba(255, 255, 255, 0.25),
                 inset -3px -3px 5px rgba(0, 0, 0, 0.5);
               transition-delay: 0s; */
-              box-shadow: 5px 5px 7px rgba(218, 165, 32, 0.25),
+              /*   box-shadow: 5px 5px 7px rgba(218, 165, 32, 0.25),
                 inset 2px 2px 3px rgba(255, 215, 0, 0.25),
-                inset -3px -3px 5px rgba(128, 100, 0, 0.5);
+                inset -3px -3px 5px rgba(128, 100, 0, 0.5); */
               transition-delay: 0s;
             }
             .icon::before {
@@ -106,9 +105,9 @@
             .icon::before {
               content: "";
               position: absolute;
-              inset: 10px;
+              inset: 1px;
               /*     background: #2f363e; */
-              background: goldenrod;
+              background: #ece8e7;
               border-radius: 50%;
               box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5),
                 inset 2px 2px 3px rgba(255, 255, 255, 0.25),
