--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -22,6 +22,10 @@ button {
   //For some reason align-content doesn't work
   align-items: center;
   justify-content: space-around;
+  .logo{
+    color: #b48821;
+    font-family: monospace;
+  }
 
   .card {
     border: none;
@@ -34,16 +38,14 @@ button {
   .icons ul {
     font-size: 3rem;
     display: flex;
-    gap: 3rem;
-    a{
-      color: $text-color;
-      
+    gap: 2rem;
+    a {
+      color:#b48821 ;
     }
-    
-   
   }
   h4 {
     font-size: 2rem;
+    color:$text-color;
   }
   .links {
     font-size: 1rem;
@@ -54,8 +56,8 @@ button {
   }
 }
 .copyright {
-  background-color: #2b2b28;
-  color: $button-text-color;
+  background-color:#e8e3d6;
+  color: $text-color;
   font-size: 2rem;
 
   text-align: center;
