--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,7 @@
 
 
 $primary-background-color: white;
-$secondary-background-color: #ece8e7;
+$secondary-background-color: #ECE8E7;
 $text-color: #333;
 $button-text-color: white;
 
