--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -46,7 +46,6 @@
         .active {
           button {
             .icon {
-              color: gold;
               transition-delay: 0s;
             }
             .icon::before {
@@ -69,8 +68,10 @@
           justify-content: center;
           padding: 4.9rem;
           border-radius: 50%;
-          background: #fcfcfc;
-          box-shadow: 20px 20px 60px #d6d6d6, -20px -20px 60px #ffffff;
+          /*       background: #fcfcfc;
+          box-shadow: 20px 20px 60px #d6d6d6, -20px -20px 60px #ffffff; */
+          background: white;
+          box-shadow: 10px 22px 40px #0000 5%;
 
           button {
             display: flex;
@@ -86,21 +87,28 @@
               display: flex;
               justify-content: center;
               align-items: center;
-              color: gold;
+              border: 2px solid #b48821;
               border-radius: 50%;
               transition: 0.5s;
               transition-delay: 0.2s;
+
+              img {
+                height: 6rem;
+                width: 6rem;
+              }
             }
             .icon::before {
               content: "";
               position: absolute;
-              inset: 1px;
-              background: #ece8e7;
+              inset: 0px;
+              background: #b48821;
+              box-shadow: 10px 22px 40px #0000 5%;
               border-radius: 50%;
-              box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5),
+              /*  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5),
                 inset 2px 2px 3px rgba(255, 255, 255, 0.25),
                 inset -3px -3px 5px rgba(0, 0, 0, 0.5);
-
+              
+ */
               transform: scale(0);
               transition: 0.5s;
             }
