--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -41,6 +41,11 @@
   margin: 10px;
 }
 
+p {
+  font-size: 1.5rem;
+  text-align: center;
+}
+
 hr {
   width: 100px;
   height: 2px; /* Added height to make the HR visible */
