--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -46,6 +46,22 @@ p {
   text-align: center;
 }
 
+button {
+  @include button-style;
+
+  a {
+    color: white;
+    font-size: 1.5rem;
+  }
+}
+
+button:hover {
+  background-color: #7a5c16;
+
+}
+
+
+
 hr {
   width: 100px;
   height: 2px; /* Added height to make the HR visible */
@@ -79,7 +95,10 @@ a {
   font-size: 40px;
   margin: 10px;
 }
-
+ 
+a:hover {
+  opacity: 0.8;
+}
 .progress-wrapper {
   width: 100%;
   background: black;
