fixed the footer

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -29,6 +29,10 @@ button {
       font-size: 3rem;
     }
   }
+
+  .contact {
+    display: flex;
+  }
   .about-me {
     border: none;
     background-color: transparent;
