--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -65,7 +65,7 @@
         li {
           position: relative;
           list-style: none;
-          margin: 4rem;
+          margin: 3.5rem 5rem;
           display: flex;
           justify-content: center;
           padding: 4.9rem;
