--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,9 +4,18 @@
 //this is for test
 button {
   @include button-style;
-  margin-right: 2rem
-}
+  margin-right: 2rem;
+  .links:hover{
+    text-decoration: none;
+    color: black;
+    font-size: 1.2rem;
+  }
 
+  
+}
+.button-color{
+  color:white
+}
 .logo {
   @include logo-font-style;
   padding: 0 2rem;
@@ -30,8 +39,10 @@ button {
 }
 .links{
 text-decoration: none;
-color:black;
 font-size:1.2rem;
+}
+.link-color{
+  color:black;
 }
 .nav-menu li {
   list-style: none;
@@ -42,8 +53,7 @@ font-size:1.2rem;
   display: none;
 }
 .links:hover{
-  opacity: .6;
-}
+color:white}
 
 @media (max-width: 800px) {
   .hamburger {
@@ -85,12 +95,17 @@ font-size:1.2rem;
   }
   button {
     @include paragraph-normal;
+
     background: none;
     border: none;
     box-shadow: none;
     font-size: 1rem;
     color: #000000;
     margin: 2rem;
+    &:hover{
+      color:white;
+    }
   }
+  
   
 }
