Flex properties added!

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -32,10 +32,13 @@ button {
 
   .contact {
     display: flex;
+    gap: 10rem;
+  
   }
   .about-me {
     border: none;
     background-color: transparent;
+    
     
     
     p {
