--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,7 @@
 @import "variables";
 @import "mixin";
+
+/* Hero session  */
 h1 {
   font-family: Roboto-Black;
   font-weight: 900;
@@ -9,40 +11,7 @@ h1 {
 button {
   @include button-style;
 }
-/* .feedback {
-  text-align: center;
-}
 
-.feedback-card {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 20px;
-  margin: 20px auto;
-  max-width: 400px;
-}
-
-
-
-.feedback-rating {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.stars {
-  color: #ffd700;
-}
-
-.feedback-text {
-  font-size: 16px;
-  line-height: 1.4;
-}
-
-.feedback-author {
-  margin-top: 10px;
-  font-style: italic;
-  color: #888;
-}
- */
  .hero{
   width: 100%;
    height:100vh;
@@ -103,3 +72,4 @@ button {
     background: linear-gradient(360deg, rgba(255,255,255,0) 39%,  rgba(209, 204, 204, 0.445) 39%);
   }
  }
+ /* Hero session ending */
