--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -136,6 +136,7 @@ button {
   width: 11rem;
 }
 
+/* Demo Session Style Start */
 .demo {
   display: flex;
   flex-direction: column;
@@ -199,6 +200,7 @@ button {
     }
   }
 }
+/* Demo Session Style End */
 
 .about-container {
   display: flex;
